--- a/templates/gui/menuGauche.html.twig
+++ b/templates/gui/menuGauche.html.twig
@@ -165,21 +165,21 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'fournisseur' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
+                            <a class="nav-link {% if menu_active == 'fournisseur' %}active{% endif %}" href="{{ path('admin.fournisseur.show') }}">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Fournisseurs</span>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'entreprise' %}active{% endif %}" href="{{ path('admin.emplacement.show') }}">
+                            <a class="nav-link {% if menu_active == 'entreprise' %}active{% endif %}" href="{{ path('admin.entreprise.show') }}">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Sites</span>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'os' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
+                            <a class="nav-link {% if menu_active == 'os' %}active{% endif %}" href="{{ path('admin.systeme-exploitation.show') }}">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Systèmes d'exploitation</span>
                                 </div>
