--- a/templates/gui/menuHaut.html.twig
+++ b/templates/gui/menuHaut.html.twig
@@ -91,12 +91,12 @@
             </a>
             <div class="dropdown-menu dropdown-caret dropdown-caret dropdown-menu-end py-0" aria-labelledby="navbarDropdownUser">
                 <div class="bg-white dark__bg-1000 rounded-2 py-2">
-                    <a class="dropdown-item" href="">
-                        <i class="fas fa-user-edit"></i>
-                        Profil
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a style="color: gray" class="dropdown-item" href="{{ path('admin.security.deconnexion') }}">
+{#                    <a class="dropdown-item" href="">#}
+{#                        <i class="fas fa-user-edit"></i>#}
+{#                        Profil#}
+{#                    </a>#}
+{#                    <div class="dropdown-divider"></div>#}
+                    <a style="color: red" class="dropdown-item" href="{{ path('admin.security.deconnexion') }}">
                         <i class="fas fa-sign-out-alt"></i>
                         Se déconnecter
                     </a>
