--- a/templates/tablette/show.html.twig
+++ b/templates/tablette/show.html.twig
@@ -160,7 +160,7 @@
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
-                                                        <form method="post" action="{{ path('admin.tablette.delete', {id: tablette.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la tablette : \'{{ tablette.nom }}\' ?')">
+                                                        <form method="post" action="{{ path('admin.tablette.delete', {id: tablette.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la tablette : {{ tablette.nom }} ?')">
                                                             <input type="hidden" name="_method" value="DELETE">
                                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ tablette.id) }}">
                                                             <button class="btn btn-danger btn-sm">
