--- a/templates/telephone_fixe/show.html.twig
+++ b/templates/telephone_fixe/show.html.twig
@@ -176,7 +176,7 @@
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
-                                                        <form method="post" action="{{ path('admin.telephone_fixe.delete', {id: telephone.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le téléphone {{ telephone.type }} avec la ligne : \'{{ telephone.ligne }}\' ?')">
+                                                        <form method="post" action="{{ path('admin.telephone_fixe.delete', {id: telephone.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le téléphone {{ telephone.type|lower }} {% if telephone.ligne != null %}avec la ligne : {{ telephone.ligne }}{% else %}avec l\'ip : {{ telephone.ip }}{% endif %} ?')">
                                                             <input type="hidden" name="_method" value="DELETE">
                                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ telephone.id) }}">
                                                             <button class="btn btn-danger btn-sm">
