--- a/templates/onduleur/show.html.twig
+++ b/templates/onduleur/show.html.twig
@@ -170,7 +170,7 @@
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
-                                                        <form method="post" action="{{ path('admin.onduleur.delete', {id: onduleur.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer l\'onduleur {{ onduleur.nom }} ?')">
+                                                        <form method="post" action="{{ path('admin.onduleur.delete', {id: onduleur.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer l\'onduleur : {{ onduleur.nom }} ?')">
                                                             <input type="hidden" name="_method" value="DELETE">
                                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ onduleur.id) }}">
                                                             <button class="btn btn-danger btn-sm">
