--- a/templates/pc_portable/show.html.twig
+++ b/templates/pc_portable/show.html.twig
@@ -200,7 +200,7 @@
                                                         <span class="bi bi-pencil-square"></span>
                                                     </a>
 
-                                                    <form method="post" action="{{ path('admin.pc_portable.delete', {id: pcPortable.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le PC Fixe : \'{{ pcPortable.nom }}\' ?')">
+                                                    <form method="post" action="{{ path('admin.pc_portable.delete', {id: pcPortable.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le PC Fixe : {{ pcPortable.nom }} ?')">
                                                         <input type="hidden" name="_method" value="DELETE">
                                                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ pcPortable.id) }}">
                                                         <button class="btn btn-danger btn-sm">
