--- a/templates/stockage/add.html.twig
+++ b/templates/stockage/add.html.twig
@@ -34,10 +34,14 @@
                     </div>
                     <div class="card-body bg-light">
                         {{ form_start(stockageForm) }}
-                        {{ form_row(stockageForm.nom) }}
-                        <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
-                        </div>
+                            {{ form_row(stockageForm.nom) }}
+                            <label class="fw-medium">
+                                <a style="color: red">*</a>
+                                Champs obligatoires
+                            </label>
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                            </div>
                         {{ form_end(stockageForm) }}
                     </div>
                 </div>
