--- a/templates/utilisateur/add.html.twig
+++ b/templates/utilisateur/add.html.twig
@@ -1,6 +1,10 @@
 {% extends 'gui/base.html.twig' %}
 
 {% block title %}Ajouter un utilisateur | Inventaire{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/select2-bootstrap-5-theme/select2-bootstrap-5-theme.min.css') }}" rel="stylesheet" />
+{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -34,16 +38,24 @@
                     </div>
                     <div class="card-body bg-light">
                         {{ form_start(utilisateurForm) }}
-                        {{ form_row(utilisateurForm.nom) }}
-                        {{ form_row(utilisateurForm.prenom) }}
-                        {{ form_row(utilisateurForm.email) }}
-                        <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
-                        </div>
+                            {{ form_row(utilisateurForm.nom) }}
+                            {{ form_row(utilisateurForm.prenom) }}
+                            {{ form_row(utilisateurForm.email) }}
+                            {{ form_row(utilisateurForm.entreprise) }}
+                            <label class="fw-medium">
+                                <a style="color: red">*</a>
+                                Champs obligatoires
+                            </label>
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                            </div>
                         {{ form_end(utilisateurForm) }}
                     </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascripts %}
+    <script src="{{ asset('assets/vendors/select2/select2.min.js') }}"></script>
 {% endblock %}
